feat: add bucketed allocation
